Fix interactive REPL paste handling